err/fetch-articles.err
Listing '.'...
Listing './bin'...
Compiling './bin/fa_cmd.py'...
***   File "./bin/fa_cmd.py", line 41
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fetch_articles'...
Compiling './lib/python3.5/site-packages/fetch_articles/config.py'...
***   File "./lib/python3.5/site-packages/fetch_articles/config.py", line 46
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fetch_articles/fa_cmd.py'...
***   File "./lib/python3.5/site-packages/fetch_articles/fa_cmd.py", line 41
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fetch_articles/mailit.py'...
***   File "./lib/python3.5/site-packages/fetch_articles/mailit.py", line 54
    except IndexError,e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fetch_articles/queuemanager.py'...
***   File "./lib/python3.5/site-packages/fetch_articles/queuemanager.py", line 41
    raise AttributeError,'self.to_addr has not been set yet!'
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fetch_articles/tests'...
Listing './lib/python3.5/site-packages/fetch_articles-0.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
